estilizando section Projetos

--- a/index.html
+++ b/index.html
@@ -34,16 +34,41 @@
         <section id="projetos">
             <h2>Projetos</h2>
             <div class="projeto">
-                <h3>Projeto 1</h3>
-                <p>Descrição do projeto 1</p>
+                <h3>LearningJavaDeitel</h3>
+                <p>Este é meu projeto pessoal onde estou aprendendo Java de forma autodidata utilizando o livro "Java Como Programar" dos autores Deitel & Deitel.
+                </p>
+                <div class="button">
+                    <a href="https://github.com/josegonzalezmonroy/LearningJavaDeitel" target="_blank">
+                        <button><p>Repositório</p></button>
+                    </a>    
+                </div>
             </div>
             <div class="projeto">
-                <h3>Projeto 2</h3>
-                <p>Descrição do projeto 2</p>
+                <h3>Loja de produtos</h3>
+                <p>Projeto colaborativo (loja) realizado no curso Full-Stack da Toti Diversidade</p>
+                <div class="button">
+                    <a href="https://github.com/josegonzalezmonroy/projeto-final-grupo-1" target="_blank">
+                        <button><p>Repositório</p></button>
+                    </a>    
+                </div>
             </div>
             <div class="projeto">
-                <h3>Projeto 3</h3>
-                <p>Descrição do projeto 3</p>
+                <h3>API Marvel</h3>
+                <p>Projeto de consumo da API da Marvel utilizando React e TypeScript, alem disso foi utilizado Chackra UI.</p>
+                <div class="button">
+                    <a href="https://github.com/josegonzalezmonroy/api_marvel" target="_blank">
+                        <button><p>Repositório</p></button>
+                    </a>    
+                </div>
+            </div>
+            <div class="projeto">
+                <h3>API Nasa</h3>
+                <p>Projeto de consumo da API da Nasa mostrando a imagen do dia</p>
+                <div class="button">
+                    <a href="https://github.com/josegonzalezmonroy/api-nasa" target="_blank">
+                        <button><p>Repositório</p></button>
+                    </a>    
+                </div>
             </div>
         </section>
         <section id="contato">
@@ -64,4 +89,4 @@
         <p>Desenvolvido por Jose</p>
     </footer>
 </body>
-</html>
+</html
