Adicionando seção "Sobre" e estilizando a seção "Projetos" com ícones de tecnologias. E media query

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+    <div class="sobre">
         <div class="images">
             <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
             <img src="img/profile.jpg" alt="foto de perfil" class="foto">
@@ -35,13 +36,19 @@
                 <p>Olá, meu nome é <strong>Jose Gregorio</strong>. Sou um desenvolvedor trainee com foco em Java, tendo iniciado minha jornada com o livro Deitel. Possuo conhecimentos em bancos de dados SQL e NoSQL, além de Git para controle de versões. Também tenho familiaridade com tecnologias web, como HTML, CSS e JavaScript.</p>
             </div>
         </section>
-        
+    </div>
         <section id="projetos">
             <h2>Projetos</h2>
+        <div class="projetos">
             <div class="projeto">
                 <h3>LearningJavaDeitel</h3>
                 <p>Este é meu projeto pessoal onde estou aprendendo Java de forma autodidata utilizando o livro "Java Como Programar" dos autores Deitel & Deitel.
                 </p>
+                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <div class="icones">
+                    <i class="fa-brands fa-java"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
                 <div class="button">
                     <a href="https://github.com/josegonzalezmonroy/LearningJavaDeitel" target="_blank">
                         <button><p>Repositório</p></button>
@@ -51,6 +58,12 @@
             <div class="projeto">
                 <h3>Loja de produtos</h3>
                 <p>Projeto colaborativo (loja) realizado no curso Full-Stack da Toti Diversidade</p>
+                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <div class="icones">
+                    <i class="fa-brands fa-node"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-react"></i>
+                </div>
                 <div class="button">
                     <a href="https://github.com/josegonzalezmonroy/projeto-final-grupo-1" target="_blank">
                         <button><p>Repositório</p></button>
@@ -60,6 +73,12 @@
             <div class="projeto">
                 <h3>API Marvel</h3>
                 <p>Projeto de consumo da API da Marvel utilizando React e TypeScript, alem disso foi utilizado Chackra UI.</p>
+                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <div class="icones">
+                    <i class="fa-brands fa-js"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-react"></i>
+                </div>
                 <div class="button">
                     <a href="https://github.com/josegonzalezmonroy/api_marvel" target="_blank">
                         <button><p>Repositório</p></button>
@@ -69,12 +88,19 @@
             <div class="projeto">
                 <h3>API Nasa</h3>
                 <p>Projeto de consumo da API da Nasa mostrando a imagen do dia</p>
+                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <div class="icones">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3"></i>
+                    <i class="fa-brands fa-js"></i>
+                </div>
                 <div class="button">
                     <a href="https://github.com/josegonzalezmonroy/api-nasa" target="_blank">
                         <button><p>Repositório</p></button>
                     </a>    
                 </div>
             </div>
+        </div>
         </section>
         <section id="contato">
             <h2>Contato</h2>
