Adicionando seção "Sobre" com imagens e estilizando layout para melhor apresentação

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Portfolio - Jose Gonzalez</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <h1 id="pequeno">JG</h1>
         <h1 id="inteiro">Jose Gregorio</h1>
         <nav>
@@ -26,16 +26,19 @@
     </header>
     <main>
     <div class="sobre">
-        <div class="images">
-            <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
-            <img src="img/profile.jpg" alt="foto de perfil" class="foto">
-        </div>
-        <section id="sobre">
-            <div class="conteudo">
-                <h2>Sobre</h2>
-                <p>Olá, meu nome é <strong>Jose Gregorio</strong>. Sou um desenvolvedor trainee com foco em Java, tendo iniciado minha jornada com o livro Deitel. Possuo conhecimentos em bancos de dados SQL e NoSQL, além de Git para controle de versões. Também tenho familiaridade com tecnologias web, como HTML, CSS e JavaScript.</p>
+        <div class="sobre" id="sobre2">
+            <div class="images">
+                <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
+                <img src="img/profile.jpg" alt="foto de perfil" class="foto">
             </div>
-        </section>
+            <section id="sobre">
+                <div class="conteudo">
+                    <h2>Sobre</h2>
+                    <p>Olá, meu nome é <strong>Jose Gregorio</strong>. Sou um desenvolvedor trainee com foco em Java, tendo iniciado minha jornada com o livro Deitel. Possuo conhecimentos em bancos de dados SQL e NoSQL, além de Git para controle de versões. Também tenho familiaridade com tecnologias web, como HTML, CSS e JavaScript.</p>
+             
+                </div>
+            </section>
+        </div>
     </div>
         <section id="projetos">
             <h2>Projetos</h2>
