Adicionando IDs às seções "Sobre" e "Projetos", ajustando estilos e melhorando a apresentação das descrições dos projetos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-    <div class="sobre">
+    <div class="sobre" id="sobre1">
         <div class="sobre" id="sobre2">
             <div class="images">
                 <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
@@ -45,7 +45,7 @@
         <div class="projetos">
             <div class="projeto">
                 <h3>LearningJavaDeitel</h3>
-                <p>Este é meu projeto pessoal onde estou aprendendo Java de forma autodidata utilizando o livro "Java Como Programar" dos autores Deitel & Deitel.
+                <p class="descricao">Este é meu projeto pessoal onde estou aprendendo Java de forma autodidata utilizando o livro "Java Como Programar" dos autores Deitel & Deitel.
                 </p>
                 <p id="tecnologias">Tecnologias utilizadas:</p>
                 <div class="icones">
@@ -60,7 +60,7 @@
             </div>
             <div class="projeto">
                 <h3>Loja de produtos</h3>
-                <p>Projeto colaborativo (loja) realizado no curso Full-Stack da Toti Diversidade</p>
+                <p class="descricao">Projeto colaborativo (loja) realizado no curso Full-Stack da Toti Diversidade</p>
                 <p id="tecnologias">Tecnologias utilizadas:</p>
                 <div class="icones">
                     <i class="fa-brands fa-node"></i>
@@ -75,7 +75,7 @@
             </div>
             <div class="projeto">
                 <h3>API Marvel</h3>
-                <p>Projeto de consumo da API da Marvel utilizando React e TypeScript, alem disso foi utilizado Chackra UI.</p>
+                <p class="descricao">Projeto de consumo da API da Marvel utilizando React e TypeScript, alem disso foi utilizado Chackra UI.</p>
                 <p id="tecnologias">Tecnologias utilizadas:</p>
                 <div class="icones">
                     <i class="fa-brands fa-js"></i>
@@ -90,7 +90,7 @@
             </div>
             <div class="projeto">
                 <h3>API Nasa</h3>
-                <p>Projeto de consumo da API da Nasa mostrando a imagen do dia</p>
+                <p class="descricao">Projeto de consumo da API da Nasa mostrando a imagen do dia</p>
                 <p id="tecnologias">Tecnologias utilizadas:</p>
                 <div class="icones">
                     <i class="fa-brands fa-html5"></i>
@@ -134,4 +134,4 @@
         <p>Desenvolvido por Jose</p>
     </footer>
 </body>
-</html
+</html>
