--- a/index.html
+++ b/index.html
@@ -118,14 +118,12 @@
                 </a>    
             </div>
             <h3>Deixe uma mensagem</h3>
-            <form action="" method="post">
-                <label for="nome">Nome</label>
+            <form id="contact-form" method="post">                <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" placeholder="Seu nome" required>
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="seuemail@domain.com" required>
                 <label for="mensagem">Mensagem</label>
-                <textarea name="mensagem" id="mensagem" placeholder="Escreva sua mensagem aquí"
-                required></textarea>
+                <textarea name="mensagem" id="mensagem" placeholder="Escreva sua mensagem aquí" required></textarea>
                 <button type="submit">Enviar</button>
             </form>
         </section>
@@ -133,5 +131,7 @@
     <footer>
         <p>Desenvolvido por Jose</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="email.js"></script>
 </body>
 </html>
