Atualizando o README.md com informações sobre o portfólio, projetos e tecnologias utilizadas; ajustando estilos no HTML e CSS para melhor apresentação e responsividade.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h3>LearningJavaDeitel</h3>
                 <p class="descricao">Este é meu projeto pessoal onde estou aprendendo Java de forma autodidata utilizando o livro "Java Como Programar" dos autores Deitel & Deitel.
                 </p>
-                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <p id="tecnologias">Tecnologias utilizadas</p>
                 <div class="icones">
                     <i class="fa-brands fa-java"></i>
                     <i class="fa-brands fa-github"></i>
@@ -61,7 +61,7 @@
             <div class="projeto">
                 <h3>Loja de produtos</h3>
                 <p class="descricao">Projeto colaborativo (loja) realizado no curso Full-Stack da Toti Diversidade</p>
-                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <p id="tecnologias">Tecnologias utilizadas</p>
                 <div class="icones">
                     <i class="fa-brands fa-node"></i>
                     <i class="fa-brands fa-github"></i>
@@ -76,7 +76,7 @@
             <div class="projeto">
                 <h3>API Marvel</h3>
                 <p class="descricao">Projeto de consumo da API da Marvel utilizando React e TypeScript, alem disso foi utilizado Chackra UI.</p>
-                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <p id="tecnologias">Tecnologias utilizadas</p>
                 <div class="icones">
                     <i class="fa-brands fa-js"></i>
                     <i class="fa-brands fa-github"></i>
@@ -91,7 +91,7 @@
             <div class="projeto">
                 <h3>API Nasa</h3>
                 <p class="descricao">Projeto de consumo da API da Nasa mostrando a imagen do dia</p>
-                <p id="tecnologias">Tecnologias utilizadas:</p>
+                <p id="tecnologias">Tecnologias utilizadas</p>
                 <div class="icones">
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3"></i>
