Ajustando estilos no CSS e HTML, alterando a estrutura da seção "Sobre" e atualizando cores e sombras para melhorar a estética do site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
     <div class="sobre" id="sobre1">
-        <div class="sobre" id="sobre2">
+        <section class="sobre" id="sobre2">
             <div class="images">
                 <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
                 <img src="img/profile.jpg" alt="foto de perfil" class="foto">
@@ -38,7 +38,7 @@
              
                 </div>
             </section>
-        </div>
+        </section>
     </div>
         <section id="projetos">
             <h2>Projetos</h2>
