Adicionando comentários no HTML e CSS para melhor organização e compreensão do código

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <title>Portfolio - Jose Gonzalez</title>
 </head>
 <body>
+    <!-- Cabeçalho do site -->
     <header class="cabecalho">
         <h1 id="pequeno">JG</h1>
         <h1 id="inteiro">Jose Gregorio</h1>
+        <!-- Navegação principal -->
         <nav>
             <ul class="menu">
                 <li><a href="#sobre">Sobre</a></li>
@@ -24,13 +26,17 @@
             </ul>
         </nav>
     </header>
+    <!-- Conteúdo principal -->
     <main>
+    <!-- Seção Sobre -->  
     <div class="sobre" id="sobre1">
         <section class="sobre" id="sobre2">
+            <!-- Imagens da seção Sobre -->
             <div class="images">
                 <img src="img/sobre.jpg" alt="imagen de codigos" class="img-sobre"> 
                 <img src="img/profile.jpg" alt="foto de perfil" class="foto">
             </div>
+            <!-- Conteúdo da seção Sobre -->
             <section id="sobre">
                 <div class="conteudo">
                     <h2>Sobre</h2>
@@ -40,6 +46,7 @@
             </section>
         </section>
     </div>
+        <!-- Seção Projetos -->
         <section id="projetos">
             <h2>Projetos</h2>
         <div class="projetos">
@@ -105,6 +112,7 @@
             </div>
         </div>
         </section>
+        <!-- Seção Contato -->
         <section id="contato">
             <h2>Contato</h2>
             <div class="icones">
@@ -118,6 +126,7 @@
                 </a>    
             </div>
             <h3>Deixe uma mensagem</h3>
+            <!-- Formulario -->
             <form id="contact-form" method="post">                <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" placeholder="Seu nome" required>
                 <label for="email">Email</label>
@@ -128,9 +137,11 @@
             </form>
         </section>
     </main>
+    <!-- Rodapé do site -->
     <footer>
         <p>Desenvolvido por Jose</p>
     </footer>
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="email.js"></script>
 </body>
